# delivery-accelerator

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  main.py
backend/agents/: ai_setup.py  base.py  context_synthesizer.py  document_parser.py  review_qa.py  scaffolder.py
backend/agents/reviewers/: architecture.py  base_reviewer.py  compliance.py  performance.py  reliability.py  security.py
backend/api/: graph_access.py  graph_runner.py  session_store.py  ws_manager.py
backend/api/models/: documents.py  pipeline.py  sessions.py
backend/api/routes/: documents.py  pipeline.py  sessions.py  websocket.py
backend/graph/: nodes.py  pipeline.py  state.py
backend/prompts/instructions/: base_rules.md
backend/rubrics/: architecture.yaml  compliance.yaml  loader.py  performance.yaml  reliability.yaml  security.yaml
backend/schemas/: artifacts.py  pipeline.py  project_context.py  review.py  review_qa.py
backend/skills/: base.py
backend/skills/extraction/: detect_standard_conflicts.py  extract_components.py  extract_nfrs.py  extract_stories.py  extract_tech_stack.py  identify_gaps.py
backend/skills/generation/: generate_hook_config.py  generate_instruction_section.py  (+5 more)
backend/tools/: aggregator.py  consistency_checker.py  standards_loader.py  zip_builder.py
docs/: ARCHITECTURE_v2.0.md  BRD_v2.0.md  IMPLEMENTATION_GUIDE_v2.0.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
tests/test_skills/: test_detect_standard_conflicts.py
tests/test_tools/: test_standards_loader.py
(+44 files in other folders)
